--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,40 @@
+body{
+  background-color: #F0F4F9 !important;
+}
 .content{
-  margin: 25px;
+  margin: 20px 70px 70px 70px;
 }
 .header{
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.header button{
+  padding: 5px 50px;
+  font-size: 0.9rem;
+  border: 2px solid #275FAF;
+}
+.selection-armarios{
+  border-top-left-radius: 80px;
+  border-bottom-left-radius: 80px;
+}
+.selection-turmas{
+  border-top-right-radius: 80px;
+  border-bottom-right-radius: 80px;
+}
+.header-armarios .selection-armarios{
+  background-color: #275FAF;
+  color: white;
+}
+.header-turmas .selection-turmas{
+  background-color: #275FAF;
+  color: white;
+}
+.main{
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.425);
 }
