--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,6 @@ body{
 }
 .header button{
   padding: 5px 50px;
-  font-size: 0.9rem;
   border: 2px solid #275FAF;
 }
 .selection-armarios{
@@ -37,4 +36,49 @@ body{
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.425);
+}
+.armarios{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.armario{
+  border: 1px solid black;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+.armarios-select{
+  width: 200px;
+  padding: 6px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+.armarios-header{
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.btn-criar{
+  border: 1px solid black;
+  border-radius: 35px;
+  padding: 5px 15px;
+  background-color: transparent;
+  margin-left: 30px;
+  display: flex;
+  gap: 25px;
+  height: fit-content;
+}
+.meu-modal{
+  background-color: white;
+  background-color: rgba(0, 0, 0, 0.541);
+}
+.meu-modal .modal-content{
+  padding: 10px;
 }
