--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,7 @@ body{
   font-weight: 500;
   border-radius: 10px;
   margin-bottom: 15px;
+  cursor: pointer;
 }
 .armario-livre{
   border: 2px solid #439C43;
